--- a/paragraph_secend.html
+++ b/paragraph_secend.html
@@ -6,4 +6,4 @@
 
 
 
-<p> Assalamu Alaikum Orahmatullah, my name is <b>Md Abdullah Al Shakib</b>. I am a flutter developer. I love coding. I live this <i>work to establish and elevate</i> myself. In Sha Allah one day I will be successful and develop myself honestly</p>
+<p> Assalamu Alaikum Orahmatullah, my name is <b>Md Abdullah Al Shakib</b>. I am a flutter developer. I love coding. I live this <i>work to establish and elevate</i> myself. In Sha Allah one day I will be successful and develop myself honestly.</p>
