--- a/paragraph_secend.html
+++ b/paragraph_secend.html
@@ -1,9 +1,15 @@
 <p>Hi.My name is <i>shakib.</i></p>
 
 <p>
-    I am a student. I recently completed my diploma engeneering of computer science.
+    I am a student. I recently completed my diploma engineering of computer science.
 </p>
 
 
 
-<p> Assalamu Alaikum Orahmatullah, my name is <b>Md Abdullah Al Shakib</b>. I am a flutter developer. I love coding. I live this <i>work to establish and elevate</i> myself. In Sha Allah one day I will be successful and develop myself honestly.</p>
+<p>
+    Assalamu Alaikum Orahmatullah, my name is <b>Md Abdullah Al Shakib</b>. 
+
+    I am a flutter developer. I love coding. I live this <i>work to establish and elevate</i> myself. In Sha Allah one day I will be successful and develop myself honestly.
+</p>.
+
+
