--- a/heading.html
+++ b/heading.html
@@ -6,4 +6,4 @@
 <h6>Member</h6>
 
 
-<p>What is a paragraph? Paragraphs are the building <b>blocks of papers</b>. Many students define paragraphs in terms of length: a paragraph is a group of at least <em>five sentences</em>, a paragraph is half a page long, etc. <i>In reality</i>, though, the unity and coherence of ideas among sentences is what constitutes a <strong>paragraph</strong>.</p>
+<p>What is a paragraph? <small>Paragraphs</small> are the building <b>blocks of papers</b>. Many students define paragraphs in terms of length: a paragraph is a group of at least <em>five sentences</em>, a paragraph is half a page long, etc. <i>In reality</i>, though, the unity and coherence of ideas among sentences is what constitutes a <strong>paragraph</strong>.</p>
