unordered list, ordered list, div list

--- a/list.html
+++ b/list.html
@@ -1,7 +1,54 @@
-<h1>List Item Practice</h1>
+<h1>List Item Practice</h1> ---> li
 
 <li>Banana</li>
 <li>Apple</li>
 <li>Guava</li>
 <li>Jack Fruit</li>
 <li>Water</li>
+
+
+<h1>Unordered List Practice</h1> ---> ul
+
+<ul>        
+   <li>Pen</li>
+   <li>Book</li>
+   <li>Chips</li>
+   <li>Biscit</li>
+   <li>Cool Drink</li>
+
+</ul>
+
+
+<h1>Order List Practice</h1> ---> ol
+
+<ol>
+    <li>Shakib</li>
+    <li>Jisan</li>
+    <li>Shadik</li>
+    <li>Faruk</li>
+    <li>Nahid</li>
+</ol>
+
+
+<h1>Division Item Practice</h1> ---> div, Container Tag
+
+<div>
+    <h2>Fashion</h2>
+    <ul>
+        <li>Pant
+            <ul>
+                <li>Baggi Pant</li>
+                <li>Gins Pant</li>
+                <li>Dolla Pant</li>
+                <li>Tight Pant</li>
+                <li>Short Pant</li>
+            </ul>
+        </li>
+
+        <li>Shirt</li>
+        <li>Tai</li>
+        <li>Belt</li>
+        <li>Cap</li>
+    </ul>
+
+</div>
