list under list

--- a/list.html
+++ b/list.html
@@ -44,7 +44,15 @@
                 <li>Short Pant</li>
             </ul>
         </li>
-        <li>Shirt</li>
+        <li>Shirt
+            <ol>
+                <li>Half Shirt</li>
+                <li>White Shirt</li>
+                <li>Black Shirt</li>
+                <li>Green Shirt</li>
+                <li>Red Shirt</li>
+            </ol>
+        </li>
         <li>Tai</li>
         <li>Belt</li>
         <li>Cap</li>
