--- a/again_div_practice.html
+++ b/again_div_practice.html
@@ -3,23 +3,21 @@
 <div>
 
     <ul>
-        <li>Shakib
+        <li><b>Shakib</b>
             <ol>
                 <li>age=22</li>
             </ol>
         </li>
-        <li>Faruk
+        <li><h4>Faruk</h4>
             <ol>
                 <li>age=24</li>
             </ol>
         </li>
-        <li>Shadik
+        <li><h5>Shadik</h5>
             <ol>
                 <li>age=18</li>
             </ol>
         </li>
     </ul>
-
-
 
 </div>
