--- a/link_anchor.html
+++ b/link_anchor.html
@@ -1,3 +1,6 @@
 <h1>anchor tag open in new tab</h1>
 
 <a href="https://moviebox.ph/" target="_blank">Go moviebox</a>
+
+<br>
+<a href="https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_target" target="_blank">Boom!</a>
