--- a/link.html
+++ b/link.html
@@ -6,3 +6,5 @@
 <h2>Facebook</h2>
 
 <a href="https://moviebox.ph/">Go Facebook</a>
+
+<a href="https://moviebox.ph/" target="_blank">Click mama</a>
