--- a/image.html
+++ b/image.html
@@ -1,3 +1,6 @@
 <h1>Image for the internet</h1>
 
 <img src="https://cdn.pixabay.com/photo/2015/01/26/22/40/child-613199_640.jpg">
+
+<img src="https://avatars.githubusercontent.com/u/180852712?v=4" alt="Image cooming soon">
+
