image for the internet and folder

--- a/image.html
+++ b/image.html
@@ -9,3 +9,21 @@
 <p><img src="https://www.cloud10beauty.com/cdn/shop/files/BeautiEdit-720-BPA_2c6b226c-a7c3-45bf-b9f9-4ee7a109ccdf.jpg?v=1693234278" alt=""></p>
 
 
+<h1>Image for the local</h1>
+
+<img src="images/salat/salat.jpg" alt="Yes, you are right">
+
+<h1>Image list</h1>
+
+<div>
+
+    <ol><img src="images/noddles.jpg" alt="cooming"></ol> 
+    <ol><img src="images/bief.jpeg" alt="image cooming"></ol>
+    <ul><img src="images/salat/salat.jpg" alt="image cooming soon"></ul>
+
+
+
+
+</div>
+
+
