--- a/structure.html
+++ b/structure.html
@@ -1,9 +1,19 @@
-<html>
-  <header></header>
+<!DOCTYPE html>
 
-  <body>
-    <footer>
-        
-    </footer>
-  </body>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Clothing Brand</title>
+    
+    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOuxrvcNMfGLh73uKP1QqYpKoCB0JLXiBMvA&s" type="image/x-icon">
+
+
+  </head>
+
+
+  <body></body>
+
+
 </html>
